change search query from " term " to " name "
