# swagger-docs/swagger.yaml
@@ -558,26 +558,28 @@ paths:
         '500':
           description: Internal server error
 
-  /api/products/search?term=example:
+  /api/products/search?name=example:
     get:
       tags: [Product]
-      summary: Search products
+      summary: Search for products
+      description: Retrieve a list of products based on the search criteria.
       parameters:
-        - name: term
-          in: term
-          required: true
-          schema:
-            type: string
-            default: ""
-      security:
-        - bearerAuth: []
+        - name: name
+          in: query
+          description: The name of the product to search for.
+          required: false
+          type: string
       responses:
-        '200':
-          description: List of searched products
+        '201':
+          description: Review created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ProductListResponse'
+                $ref: '#/components/schemas/ReviewResponse'
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
         '500':
           description: Internal server error
 
